syntax = "proto3";

package brew.go.proto.order;
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
option go_package = "github.com/omkarbhostekar/brewgo/proto/gen";

service OrderService {
    rpc PlaceOrder (PlaceOrderRequest) returns (OrderResponse) {
        option (google.api.http) = {
            post: "/v1/orders"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            tags: ["Order"]
            summary: "Place an order product."
            description: "Use this API to place an order."
        };
    }

    rpc FulfillOrder (FulfillOrderRequest) returns (OrderResponse) {
        option (google.api.http) = {
            patch: "/v1/orders/{order_id}"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            tags: ["Order"]
            summary: "Update order status."
            description: "Use this API to update order status."
        };
    }

    rpc GetOrderStatus (GetOrderStatusRequest) returns (OrderResponse) {
        option (google.api.http) = {
            get: "/v1/orders/{order_id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            tags: ["Order"]
            summary: "Get order status."
            description: "Use this API to get order status."
        };
    }
}

message PlaceOrderRequest {
    int32 user_id = 2;
    repeated OrderItem order_items = 3;
}

message OrderRequestItem {
    int32 product_id = 1;
    int32 quantity = 2;
    string notes = 3;
}

message OrderResponse {
    int32 order_id = 1;
    string order_status = 2;
    google.protobuf.Timestamp updated_at = 3;
    repeated OrderItem order_items = 4;
}

message OrderItem {
    int32 product_id = 1;
    int32 quantity = 2;
    string notes = 3;
    string item_status = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message FulfillOrderRequest {
    int32 order_id = 1;
    optional string order_status = 2;
}

message GetOrderStatusRequest {
    int32 order_id = 1;
}
